# docs/openapi-v1-compiled.json
@@ -1384,7 +1384,7 @@
           },
           {
             "in": "query",
-            "name": "from",
+            "name": "fromDate",
             "schema": {
               "type": "string",
               "format": "date"
@@ -1393,7 +1393,7 @@
           },
           {
             "in": "query",
-            "name": "to",
+            "name": "toDate",
             "schema": {
               "type": "string",
               "format": "date"
